--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^3.2.1",
     "angular-in-memory-web-api": "0.1.16",
     "core-js": "^2.4.1",
+    "mydatepicker": "^1.0.25",
     "ng2-bootstrap": "^1.1.16",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
