--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^2.2.1",
     "@angular/router": "^3.2.1",
     "angular-in-memory-web-api": "0.1.16",
+    "angularfire2": "^2.0.0-beta.6",
     "core-js": "^2.4.1",
+    "firebase": "^3.6.3",
     "mydatepicker": "^1.0.25",
     "ng2-bootstrap": "^1.1.16",
     "rxjs": "5.0.0-beta.12",
