Environment variable dev/test/prod - fix: #19, fix karma tests

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 /node_modules
 /bower_components
 
+# config
+src/environments/environment.test.ts
+src/environments/environment.prod.ts
+
 # IDEs and editors
 /.idea
 /.vscode
