Update libraries, load test data script - fix: #21

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 
 # dependencies
 /node_modules
-/bower_components
 
 # config
 src/environments/environment.test.ts
@@ -14,12 +13,18 @@ src/environments/environment.prod.ts
 
 # IDEs and editors
 /.idea
-/.vscode
 .project
 .classpath
 .c9/
 *.launch
 .settings/
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # misc
 /.sass-cache
