--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^3.6.3",
     "mydatepicker": "^1.0.25",
     "ng2-bootstrap": "^1.1.16",
+    "ng2-dnd": "^2.1.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
