Unique id for html element of action component - fix: #34

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-in-memory-web-api": "0.1.16",
     "angularfire2": "^2.0.0-beta.6-preview",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
     "firebase": "^3.6.6",
     "mydatepicker": "^1.2.7",
     "ng2-bootstrap": "^1.2.6",
