--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "angularfire2": "^2.0.0-beta.6-preview",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
+    "dragula": "^3.7.2",
     "firebase": "^3.6.9",
     "mydatepicker": "^1.6.15",
     "ng2-bootstrap": "^1.3.3",
-    "ng2-dnd": "^2.2.2",
+    "ng2-dragula": "^1.3.0",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.6"
