--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "tam4",
-  "version": "0.0.0",
-  "license": "MIT",
-  "angular-cli": {},
+  "version": "0.3.0",
+  "license": "GPLv3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "lint": "tslint \"src/**/*.ts\"",
+    "build": "ng build",
     "test": "ng test",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -23,30 +22,28 @@
     "@angular/router": "^3.4.0",
     "angularfire2": "^2.0.0-beta.6-preview",
     "core-js": "^2.4.1",
-    "crypto-js": "^3.1.9-1",
     "dragula": "^3.7.2",
     "firebase": "^3.6.9",
     "mydatepicker": "^1.6.15",
     "ng2-bootstrap": "^1.3.3",
     "ng2-dragula": "^1.3.0",
     "rxjs": "^5.1.0",
-    "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-beta.32.3",
+    "@angular/cli": "1.0.0-rc.0",
     "@angular/compiler-cli": "^2.4.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0-beta.4",
-    "jasmine-core": "2.5.2",
+    "codelyzer": "~2.0.0",
+    "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
