--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
     "firebase": "^3.6.9",
+    "font-awesome": "^4.7.0",
     "mydatepicker": "^1.6.15",
     "ng2-bootstrap": "^1.3.3",
     "ng2-dragula": "^1.3.0",
