--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
     "angularfire2": "^2.0.0-beta.6-preview",
+    "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
     "firebase": "^3.6.9",
