--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dragula": "^3.7.2",
     "firebase": "^3.6.9",
     "font-awesome": "^4.7.0",
+    "lato-font": "^2.0.0",
     "mydatepicker": "^1.6.15",
     "ng2-bootstrap": "^1.3.3",
     "ng2-dragula": "^1.3.0",
