Upgrade angular-cli to 1.0.0-rc.4

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ report.html
 # misc
 /.sass-cache
 /connect.lock
-/coverage/*
+/coverage
 /libpeerconnection.log
 npm-debug.log
 testem.log
@@ -50,6 +50,6 @@ testem.log
 /e2e/*.js
 /e2e/*.map
 
-#System Files
+# System Files
 .DS_Store
 Thumbs.db
