--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ src/environments/environment.prod.ts
 tests/data/local-dev.json
 tests/data/local-test.json
 tests/data/*.pid
+/remote-profile
 
 # Robot Framework
 log.html
