--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "angularfire2": "^2.0.0-beta.8",
+    "angularfire2": "^4.0.0-rc.0",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
-    "firebase": "3.7.7",
+    "firebase": "^3.9.0",
     "font-awesome": "^4.7.0",
     "lato-font": "^3.0.0",
     "mydatepicker": "^1.9.1",
