--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "angularfire2": "^4.0.0-rc.0",
+    "angularfire2": "^4.0.0-rc.1",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "dragula": "^3.7.2",
-    "firebase": "^3.9.0",
+    "firebase": "^4.1.3",
     "font-awesome": "^4.7.0",
     "lato-font": "^3.0.0",
     "mydatepicker": "^1.9.1",
     "ng2-bootstrap": "^1.6.3",
     "ng2-dragula": "^1.3.1",
+    "promise-polyfill": "6.0.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
