--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "font-awesome": "^4.7.0",
     "lato-font": "^3.0.0",
     "mydatepicker": "^1.9.1",
-    "ng2-bootstrap": "^1.6.3",
     "ng2-dragula": "^1.3.1",
+    "ngx-bootstrap": "^1.7.1",
     "promise-polyfill": "6.0.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
